--- a/css/ls.css
+++ b/css/ls.css
@@ -33,7 +33,8 @@ body {
 
 /* Inputs */
 input[type="email"],
-input[type="password"] {
+input[type="password"],
+select{
   width: 100%;
   padding: 0.75rem;
   margin-bottom: 1rem;
